words + font update

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div>
       <h2>Gidole</h2>
       <p><a target="_blank" href="http://en.wikipedia.org/wiki/Gidole">Gidole</a> is a beautiful mountain town in southern Ethiopia where I grew up.
-        <br>It's my first font and I couldn't have made it without help from great people at <a target="_blank" href="http://typophile.com/node/121996">typophile</a> and <a target="_blank" href="http://www.reddit.com/r/typography/comments/2uz4k7/gidole_gidole_play_can_now_both_be_downloaded/">r/typography</a>.</p>
+        <br>It's my first typeface with feedback/help from <a target="_blank" href="http://typophile.com/node/121996">typophile</a> and <a target="_blank" href="http://www.reddit.com/r/typography/comments/2uz4k7/gidole_gidole_play_can_now_both_be_downloaded/">r/typography</a>.</p>
         </div>
     </div>
     <div id="world" class="behind" data-0="opacity[quadratic]:0;" data-600="opacity[quadratic]:1;" data-1200="transform[inoverkvart]:scale(1);opacity[quadratic]:1;" data-1700="opacity:0;transform:scale(3)">
@@ -212,7 +212,8 @@
     <div class="wrap fff" data-4000="opacity[cubic]:0;" data-4400="opacity[cubic]:1" data-4600="opacity[cubic]:0;">
       <div>
         <h2>Open Source</h2>
-        <p>100% free <a target="_blank" href="https://github.com/gidole/Gidole-Typefaces/blob/master/Resources/GidoleFont/License.txt">OFL license</a>. Attribution is optional but much appreciated:)<br>I'm using <a target="_blank" href="http://fontforge.github.io/">Fontforge</a> and the source is on <a target="_blank" href="https://github.com/gidole/Gidole-Typefaces">Github</a>.</p>
+        <p>100% free <a target="_blank" href="https://github.com/gidole/Gidole-Typefaces/blob/master/Resources/GidoleFont/License.txt">OFL license</a> for private + commercial use.
+          <br>I'm using <a target="_blank" href="http://fontforge.github.io/">Fontforge</a> and the source is on <a target="_blank" href="https://github.com/gidole/Gidole-Typefaces">Github</a>.</p>
       </div>
     </div>
 
@@ -270,7 +271,7 @@
     <div class="wrap forceforward inverted" data-7200="opacity[cubic]:0;" data-7600="opacity[cubic]:1">
       <div>
         <h2>The End</h2>
-        <p>Thanks for stopping by. Help me by reporting issues and ideas for <a href="http://github.com/gidole/Gidole-Typefaces/issues" target="_blank">font</a>/<a href="https://github.com/gidole/gidole.github.io/issues" target="_blank">website</a> and by spreading the word. <a href="https://twitter.com/intent/follow?screen_name=andreaslarsendk" target="_blank">Follow</a> me for updates. Please don't hesitate to contact me:)</p>
+        <p>Thanks for stopping by. Please share your improvements with me and tell me about issues/ideas for <a href="http://github.com/gidole/Gidole-Typefaces/issues" target="_blank">font</a>/<a href="https://github.com/gidole/gidole.github.io/issues" target="_blank">website</a>. Follow <a href="https://twitter.com/intent/follow?screen_name=andreaslarsendk" target="_blank">@andreaslarsendk</a> for updates.</p>
       </div>
     </div>
 
@@ -303,13 +304,14 @@
       <div class="wrap">
         <span><div id="close">×</div></span>
         <h2>Get karma</h2>
-        <p>Be nice to other people :)<br>
-          Star Gidole on <a href="http://github.com/gidole/Gidole-Typefaces" target="_blank">Github</a> and appreciate on <a target="_blank" href="http://behance.net/gallery/22341011/Gidole-Free-Typeface">Bēhance</a><br>
-          Tell your friends about Gidole on
+        <p>» Be nice to other people :)<br>
+          » <a href="https://www.ammado.com/community/153173/donate" target="_blank">Donate</a> to the Ethiopian Red Cross Society.<br>
+          » Share on
           <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fgidole.github.io%2F&text=Gidole%20%26%20Gidolinya%20Free%20Typefaces&original_referer=&via=andreaslarsendk&hashtags=gidole" target="_blank">Twitter</a>,
           <a href="http://www.facebook.com/sharer/sharer.php?s=100&p%5Burl%5D=http%3A%2F%2Fgidole.github.io" target="_blank">Facebook</a>,
           <a href="https://plus.google.com/share?url=http://gidole.github.io" target="_blank">Google</a> or
           <a href="https://www.linkedin.com/shareArticle?mini=true&url=http://gidole.github.io" target="_blank">Linkedin</a>.<br>
+          » Star on <a href="http://github.com/gidole/Gidole-Typefaces" target="_blank">Github</a> and appreciate on <a target="_blank" href="http://behance.net/gallery/22341011/Gidole-Free-Typeface">Bēhance</a><br>
           Thank you!
         </p>
       </div>
@@ -357,7 +359,7 @@
           e.preventDefault();
         });
         $("#get").on("click touch", function() {
-          $("#thankyou").removeClass("invisible").delay(600).queue(function(next){
+          $("#thankyou").removeClass("invisible").delay(500).queue(function(next){
             window.location.href = 'https://github.com/gidole/Gidole-Typefaces/blob/master/gidole.zip?raw=true';
             next();
           });
