--- a/index.html
+++ b/index.html
@@ -4,32 +4,33 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Gidole Open Source Modern DIN</title>
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Gidole Open Source Modern DIN. A minimal, narrow and yet friendly typeface by @andreaslarsendk" />
+    <meta name="description" content="Gidole - Open Source Modern DIN. A minimal, narrow and yet friendly typeface" />
     <meta name="author" content="@andreaslarsendk" />
     <meta name="keywords" content="Gidole, Open Source, Typeface, Font, Free"
 
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="Gidole Open Source Modern DIN">
-    <meta itemprop="description" content="Gidole Open Source Modern DIN. A minimal, narrow and yet friendly typeface by @andreaslarsendk">
-    <meta itemprop="image" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleopensourcemoderndin.png">
+    <meta itemprop="description" content="Gidole - Open Source Modern DIN. A minimal, narrow and yet friendly typeface.">
+    <meta itemprop="image" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleopensourcemoderndinsquare.png">
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="photo" />
     <meta name="twitter:creator" content="@andreaslarsendk" />
     <meta name="twitter:title" content="Gidole Open Source Modern DIN" />
-    <meta name="twitter:image:src" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleopensourcemoderndin.png" />
+    <meta name="twitter:image:src" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleopensourcemoderndinsquare.png" />
     <meta name="twitter:url" content="https://gidole.github.io" />
     <meta name="twitter:image:width" content="1600" />
-    <meta name="twitter:image:height" content="1200" />
+    <meta name="twitter:image:height" content="1600" />
 
     <!-- Open Graph data -->
     <meta property="og:title" content="Gidole Open Source Modern DIN" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://gidole.github.io" />
+    <meta property="og:url" content="https://gidole.github.io" />
     <meta property="og:image" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleopensourcemoderndinface.png" />
-    <meta property="og:description" content="Gidole Open Source Modern DIN. A minimal, narrow and yet friendly typeface by @andreaslarsendk" />
+    <meta property="og:image:width" content="3000" />
+    <meta property="og:image:height" content="1575" />
+    <meta property="og:description" content="Gidole - Open Source Modern DIN. A minimal, narrow and yet friendly typeface." />
     <meta property="og:site_name" content="Gidole Open Source Modern DIN" />
 
     <link rel="stylesheet" href="css/main.min.css">
@@ -75,10 +76,10 @@
 <!--      <div id="pdf"><a href="https://github.com/gidole/Gidole-Typefaces/blob/master/Resources/GidoleFont/ReadMe+TestPrint.pdf?raw=true" target="_blank">pdf</a></div>-->
         <div id="share"><span id="sharetitle">Share</span><span id="sharesmile" class="invisible">:&#8198;)</span>
           <div class="links">
-            <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fgidole.github.io%2F&text=Gidole%20%26%20Gidolinya%20Free%20Typefaces&original_referer=&via=andreaslarsendk&hashtags=gidole" target="_blank">Twitter</a><br>
-            <a href="http://www.facebook.com/sharer/sharer.php?s=100&p%5Burl%5D=http%3A%2F%2Fgidole.github.io" target="_blank">Facebook</a><br>
-            <a href="https://plus.google.com/share?url=http://gidole.github.io" target="_blank">Google</a><br>
-            <a href="https://www.linkedin.com/shareArticle?mini=true&url=http://gidole.github.io" target="_blank">Linkedin</a>
+            <a href="https://twitter.com/intent/tweet?text=Gidole+-+Open+Source+Modern+DIN+by+@andreaslarsendk&url=https%3A%2F%2Fgidole.github.io" target="_blank">Twitter</a><br>
+            <a href="https://www.facebook.com/sharer/sharer.php?s=100&p%5Burl%5D=https%3A%2F%2Fgidole.github.io" target="_blank">Facebook</a><br>
+            <a href="https://plus.google.com/share?url=https://gidole.github.io" target="_blank">Google</a><br>
+            <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://gidole.github.io" target="_blank">Linkedin</a>
           </div>
         </div>
     </nav>
@@ -307,7 +308,7 @@
         <p>» Be nice to other people :)<br>
           » <a href="https://www.ammado.com/community/153173/donate" target="_blank">Donate</a> to the Ethiopian Red Cross Society.<br>
           » Share on
-          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fgidole.github.io%2F&text=Gidole%20%26%20Gidolinya%20Free%20Typefaces&original_referer=&via=andreaslarsendk&hashtags=gidole" target="_blank">Twitter</a>,
+          <a href="https://twitter.com/intent/tweet?text=Gidole+-+Open+Source+Modern+DIN+by+@andreaslarsendk&url=https%3A%2F%2Fgidole.github.io" target="_blank">Twitter</a>,
           <a href="http://www.facebook.com/sharer/sharer.php?s=100&p%5Burl%5D=http%3A%2F%2Fgidole.github.io" target="_blank">Facebook</a>,
           <a href="https://plus.google.com/share?url=http://gidole.github.io" target="_blank">Google</a> or
           <a href="https://www.linkedin.com/shareArticle?mini=true&url=http://gidole.github.io" target="_blank">Linkedin</a>.<br>
