removed branding for cleaner look

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="photo" />
     <meta name="twitter:creator" content="@andreaslarsendk" />
-    <meta name="twitter:title" content="Gidole Open Source Modern DIN" />
+    <meta name="twitter:title" content="" />
     <meta name="twitter:image:src" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleopensourcemoderndinsquare.png" />
     <meta name="twitter:url" content="https://gidole.github.io" />
     <meta name="twitter:image:width" content="1600" />
