something wrong with css minify so switching to normal css

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <meta property="og:description" content="Gidole - Open Source Modern DIN. A minimal, narrow and yet friendly typeface." />
     <meta property="og:site_name" content="Gidole Open Source Modern DIN" />
 
-    <link rel="stylesheet" href="css/main.min.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
