added follow link

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
           <a href="https://plus.google.com/share?url=http://gidole.github.io" target="_blank">Google</a> or
           <a href="https://www.linkedin.com/shareArticle?mini=true&url=http://gidole.github.io" target="_blank">Linkedin</a>.<br>
           » Star on <a href="http://github.com/gidole/Gidole-Typefaces" target="_blank">Github</a> and appreciate on <a target="_blank" href="http://behance.net/gallery/22341011/Gidole-Free-Typeface">Bēhance</a><br>
-          Thank you!
+          Follow <a href="https://twitter.com/intent/follow?screen_name=andreaslarsendk" target="_blank">@andreaslarsendk</a> for updates. Thank you!
         </p>
       </div>
     </div>
