remove target blank

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <nav class="wrap" data-300="opacity[cubic]:0;" data-600="opacity[cubic]:1;" data-900="opacity[cubic]:0">
         <div id="get"><a id="download" href="#">Download</a></div>
         <div id="github"><a href="http://github.com/gidole/Gidole-Typefaces" target="_blank">Github</a></div>
-        <div id="pdf"><a href="https://github.com/gidole/Gidole-Typefaces/blob/master/Resources/GidoleFont/Readme+Characters.pdf?raw=true" target="_blank">pdf</a></div>
+        <div id="pdf"><a href="https://github.com/gidole/Gidole-Typefaces/blob/master/Resources/GidoleFont/Readme+Characters.pdf?raw=true">pdf</a></div>
         <div id="share"><span id="sharetitle">Share</span><span id="sharesmile" class="invisible">:&#8198;)</span>
           <div class="links">
             <a href="https://twitter.com/intent/tweet?text=Gidole+-+Open+Source+Modern+DIN+by+@andreaslarsendk&url=https%3A%2F%2Fgidole.github.io" target="_blank">Twitter</a><br>
