Add missing closing angle bracket

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Gidole - Open Source Modern DIN. A minimal, narrow and yet friendly typeface" />
     <meta name="author" content="@andreaslarsendk" />
-    <meta name="keywords" content="Gidole, Open Source, Typeface, Font, Free"
+    <meta name="keywords" content="Gidole, Open Source, Typeface, Font, Free">
 
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="Gidole Open Source Modern DIN">
