--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Gidole Open Source Modern DIN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Gidole - Open Source Modern DIN. A minimal, narrow and yet friendly typeface" />
-    <meta name="author" content="@andreaslarsendk" />
+    <meta name="description" content="Gidole - Open Source Modern DIN. A minimal, narrow and yet friendly typeface">
+    <meta name="author" content="@andreaslarsendk">
     <meta name="keywords" content="Gidole, Open Source, Typeface, Font, Free">
 
     <!-- Schema.org markup for Google+ -->
@@ -15,23 +15,23 @@
     <meta itemprop="image" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleopensourcemoderndinsquare.png">
 
     <!-- Twitter Card data -->
-    <meta name="twitter:card" content="photo" />
+    <meta name="twitter:card" content="photo">
 <!--    <meta name="twitter:creator" content="@andreaslarsendk" />-->
-    <meta name="twitter:title" content="" />
-    <meta name="twitter:image:src" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleopensourcemoderndinsquare.png" />
-    <meta name="twitter:url" content="https://gidole.github.io" />
-    <meta name="twitter:image:width" content="1600" />
-    <meta name="twitter:image:height" content="1600" />
+    <meta name="twitter:title" content="">
+    <meta name="twitter:image:src" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleopensourcemoderndinsquare.png">
+    <meta name="twitter:url" content="https://gidole.github.io">
+    <meta name="twitter:image:width" content="1600">
+    <meta name="twitter:image:height" content="1600">
 
     <!-- Open Graph data -->
-    <meta property="og:title" content="Gidole Open Source Modern DIN" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://gidole.github.io" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleopensourcemoderndinface.png" />
-    <meta property="og:image:width" content="3000" />
-    <meta property="og:image:height" content="1575" />
-    <meta property="og:description" content="Gidole - Open Source Modern DIN. A minimal, narrow and yet friendly typeface." />
-    <meta property="og:site_name" content="Gidole Open Source Modern DIN" />
+    <meta property="og:title" content="Gidole Open Source Modern DIN">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://gidole.github.io">
+    <meta property="og:image" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleopensourcemoderndinface.png">
+    <meta property="og:image:width" content="3000">
+    <meta property="og:image:height" content="1575">
+    <meta property="og:description" content="Gidole - Open Source Modern DIN. A minimal, narrow and yet friendly typeface.">
+    <meta property="og:site_name" content="Gidole Open Source Modern DIN">
 
     <link rel="stylesheet" href="css/main.css">
 
