Block elements don't belong inside inline elements

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
   <!-- After download -->
     <div class="ffff inverted invisible" id="thankyou" data-0="opacity[cubic]:1;">
       <div class="wrap">
-        <span><div id="close">×</div></span>
+        <div id="close"><span>×</span></div>
         <h2>Get karma</h2>
         <p>» Be nice to other people :)<br>
           » <a href="https://www.ammado.com/community/153173/donate" target="_blank">Donate</a> to the Ethiopian Red Cross Society.<br>
