--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
     <div class="wrap" data-900="opacity[cubic]:0" data-1200="opacity[cubic]:1" data-1500="opacity[cubic]:0;">
       <div>
         <h2>Gidole</h2>
-        <p>Gidole is a small, beautiful mountain town in southern Ethiopia where I grew up.
-        <br>The font is my first ever and it's a minimal DIN.</p>
+        <p>Gidole is a small, beautiful mountain town in southern Ethiopia where I grew up.</p>
       </div>
     </div>
     <div id="world" class="behind" data-0="opacity[quadratic]:0;" data-600="opacity[quadratic]:1;" data-1200="transform[inoverkvart]:scale(1);opacity[quadratic]:1;" data-1500="opacity:0;transform:scale(3)">
@@ -204,8 +203,7 @@
     <div id="slut" class="wrap inverted ff" data-2700="opacity:0" data-2701="opacity:1">
       <div>
         <h2>The End</h2>
-        <p>More info in the pdf and on Github.
-
+        <p>Find more in the pdf and on Github.</p>
       </div>
     </div>
 
@@ -352,7 +350,7 @@
 
         $("#downarrow").on("click touch", function() {
           scrollDown();
-          if ($(window).scrollTop() == 7600){
+          if ($(window).scrollTop() == 3300){
             $(this).addClass("shake").delay(500).queue(function(next){
               $(this).removeClass("shake");
               next();
