--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <div id="slut" class="wrap inverted ff" data-2700="opacity:0" data-2701="opacity:1">
       <div>
         <h2>The End</h2>
-        <p>Find more in the pdf and on Github.</p>
+        <p>More info in the pdf and on Github.</p>
       </div>
     </div>
 
