--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <noscript class="browserupgrade">Turn on javascript. Just want the download? Here: <a href="https://github.com/gidole/Gidole-Typefaces/blob/master/gidole.zip?raw=true">zip</a></noscript>
+    <noscript class="browserupgrade">Turn on javascript. Just want the download? Here: <a href="https://github.com/andreaslarsen/Gidole/blob/master/gidole.zip?raw=true">zip</a></noscript>
 
 
 <!-- JUMBO -->
@@ -71,8 +71,8 @@
 <!-- nav -->
     <nav class="wrap" data-300="opacity[cubic]:0;" data-600="opacity[cubic]:1;" data-900="opacity[cubic]:0">
         <div id="get"><a id="download" href="#">Download</a></div>
-        <div id="github"><a href="http://github.com/gidole/Gidole-Typefaces" target="_blank">Github</a></div>
-        <div id="pdf"><a href="https://github.com/gidole/Gidole-Typefaces/blob/master/Resources/GidoleFont/Readme+Characters.pdf?raw=true">pdf</a></div>
+        <div id="github"><a href="https://github.com/andreaslarsen/Gidole" target="_blank">Github</a></div>
+        <div id="pdf"><a href="https://github.com/andreaslarsen/Gidole/blob/master/Resources/GidoleFont/Readme%2BCharacters.pdf?raw=true">pdf</a></div>
     </nav>
 
 <!-- Gidole -->
@@ -282,7 +282,7 @@
         });
         $("#get").on("click touch", function() {
           $("#thankyou").removeClass("invisible").delay(500).queue(function(next){
-            window.location.href = 'https://github.com/gidole/Gidole-Typefaces/blob/master/gidole.zip?raw=true';
+            window.location.href = 'https://github.com/andreaslarsen/Gidole/blob/master/gidole.zip?raw=true';
             next();
           });
           return false;
