--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Gidole Open Source Modern DIN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Gidole - Open Source Modern DIN. A minimal, narrow and yet friendly typeface">
-    <meta name="author" content="@andreaslarsendk">
+    <meta name="author" content="@larsenwork">
     <meta name="keywords" content="Gidole, Open Source, Typeface, Font, Free">
 
     <!-- Schema.org markup for Google+ -->
@@ -71,8 +71,8 @@
 <!-- nav -->
     <nav class="wrap" data-300="opacity[cubic]:0;" data-600="opacity[cubic]:1;" data-900="opacity[cubic]:0">
         <div id="get"><a id="download" href="#">Download</a></div>
-        <div id="github"><a href="https://github.com/andreaslarsen/Gidole" target="_blank">Github</a></div>
-        <div id="pdf"><a href="https://github.com/andreaslarsen/Gidole/blob/master/Resources/GidoleFont/Readme%2BCharacters.pdf?raw=true">pdf</a></div>
+        <div id="github"><a href="https://github.com/larsenwork/Gidole" target="_blank">Github</a></div>
+        <div id="pdf"><a href="https://github.com/larsenwork/Gidole/blob/master/Resources/GidoleFont/Readme%2BCharacters.pdf?raw=true">pdf</a></div>
     </nav>
 
 <!-- Gidole -->
@@ -234,12 +234,12 @@
         <p>» Be nice to other people :)<br>
           » <a href="https://www.ammado.com/community/153173/donate" target="_blank">Donate</a> to the Ethiopian Red Cross Society.<br>
           » Share on
-          <a href="https://twitter.com/intent/tweet?text=Gidole+-+Open+Source+Modern+DIN+by+@andreaslarsendk&url=https%3A%2F%2Fgidole.github.io" target="_blank">Twitter</a>,
+          <a href="https://twitter.com/intent/tweet?text=Gidole+-+Open+Source+Modern+DIN+by+@larsenwork&url=https%3A%2F%2Fgidole.github.io" target="_blank">Twitter</a>,
           <a href="http://www.facebook.com/sharer/sharer.php?s=100&p%5Burl%5D=http%3A%2F%2Fgidole.github.io" target="_blank">Facebook</a>,
           <a href="https://plus.google.com/share?url=http://gidole.github.io" target="_blank">Google</a> or
           <a href="https://www.linkedin.com/shareArticle?mini=true&url=http://gidole.github.io" target="_blank">Linkedin</a>.<br>
           » Star on <a href="http://github.com/gidole/Gidole-Typefaces" target="_blank">Github</a> and appreciate on <a target="_blank" href="http://behance.net/gallery/22341011/Gidole-Free-Typeface">Bēhance</a><br>
-          Follow <a href="https://twitter.com/intent/follow?screen_name=andreaslarsendk" target="_blank">@andreaslarsendk</a> for updates. Thank you!
+          Follow <a href="https://twitter.com/intent/follow?screen_name=larsenwork" target="_blank">@larsenwork</a> for updates. Thank you!
         </p>
       </div>
     </div>
