--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="Gidole Open Source Modern DIN">
     <meta itemprop="description" content="Gidole - Open Source Modern DIN. A minimal, narrow and yet friendly typeface.">
-    <meta itemprop="image" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleopensourcemoderndinsquare.png">
+    <meta itemprop="image" content="/img/gidoleopensourcemoderndinsquare.png">
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="photo">
     <meta name="twitter:title" content="">
-    <meta name="twitter:image:src" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleopensourcemoderndinsquare.png">
+    <meta name="twitter:image:src" content="/img/gidoleopensourcemoderndinsquare.png">
     <meta name="twitter:url" content="https://gidole.github.io">
     <meta name="twitter:image:width" content="1600">
     <meta name="twitter:image:height" content="1600">
@@ -26,7 +26,7 @@
     <meta property="og:title" content="Gidole Open Source Modern DIN">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://gidole.github.io">
-    <meta property="og:image" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleopensourcemoderndinface.png">
+    <meta property="og:image" content="/img/gidoleopensourcemoderndinface.png">
     <meta property="og:image:width" content="3000">
     <meta property="og:image:height" content="1575">
     <meta property="og:description" content="Gidole - Open Source Modern DIN. A minimal, narrow and yet friendly typeface.">
