--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <p>Gidole is a small, beautiful mountain town in southern Ethiopia where I grew up.</p>
       </div>
     </div>
-    <div id="world" class="behind" data-0="opacity[quadratic]:0;" data-600="opacity[quadratic]:1;" data-1200="transform[inoverkvart]:scale(1);opacity[quadratic]:1;" data-1500="opacity:0;transform:scale(3)">
+    <div id="world" class="behind" data-600="opacity[quadratic]:0;" data-1200="transform[inoverkvart]:scale(1);opacity[quadratic]:1;" data-1500="opacity:0;transform:scale(3)">
       <div id="worldcenter">
 ...........................................<br>
 ................···········................<br>
@@ -199,7 +199,7 @@
       </svg>
     </div>
 
-    <div id="slut" class="wrap inverted ff" data-2700="opacity:0" data-2701="opacity:1">
+    <div id="slut" class="wrap inverted ff" data-3000="opacity:0" data-3200="opacity:1">
       <div>
         <h2>The End</h2>
         <p>More info in the pdf and on Github.</p>
