words plus saturated bg/more white text

--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
   <noscript class="browserupgrade">Turn on javascript. Just want the download? Here: <a href="https://github.com/andreaslarsen/Gidole/blob/master/gidole.zip?raw=true">zip</a></noscript>
 
   <!-- BACKGROUND -->
-  <div id="background" data-0="opacity[cubic]:1;
-    -webkit-filter: blur(0px);
-      -moz-filter: blur(0px);
-      -o-filter: blur(0px);
-      -ms-filter: blur(0px);
-      filter: blur(0px);" data-600="-webkit-filter[cubic]: blur(20px);
-      -moz-filter[cubic]: blur(20px);
-      -o-filter[cubic]: blur(20px);
-      -ms-filter[cubic]: blur(20px);
-      filter[cubic]: blur(20px);"></div>
+  <div id="background"
+data-0="opacity[cubic]:1;
+    -webkit-filter: blur(0px) saturate(1);
+      -moz-filter: blur(0px) saturate(1);
+      -ms-filter: blur(0px) saturate(1);
+      filter: blur(0px) saturate(1);"
+data-600="-webkit-filter[cubic]: blur(20px) saturate(1.2);
+      -moz-filter[cubic]: blur(20px) saturate(1.2);
+      -ms-filter[cubic]: blur(20px) saturate(1.2);
+      filter[cubic]: blur(20px) saturate(1.2);"></div>
 
   <!-- JUMBO -->
   <div id="uno" class="clickable" data-0="opacity[cubic]:1;" data-300="opacity[cubic]:0;">
@@ -161,7 +161,7 @@
 
 
   <!-- an -->
-  <div class="farbehind" data-1500="opacity[cubic]:0" data-1800="opacity[cubic]:1" data-2100="opacity[cubic]:0;">
+  <div class="farbehind" data-1500="opacity[cubic]:0" data-1800="opacity[cubic]:0.9" data-2100="opacity[cubic]:0;">
     <svg class="letter" viewBox="0 0 2600 2000">
       <path d="M765,462C895,462 1001.72,513.237 1067,589C1150,685.335 1150,781.778 1150,879L1150,1560L1000,1560L1000,1448C940,1534 845,1576 725,1576C539.377,1576 380,1440.9 380,1239C380,1133 427,1050 489,997C592,909 717,909 855,909L1000,909L1000,844C1000,803 1000,734 952,675C912,626 847.321,596 765,596C671.811,596 576.551,632.5 502,669L445,545C533.781,503.557 644.146,462 765,462ZM530,1239C530,1366.88 621.434,1442 745,1442C833,1442 903.086,1407.07 944,1353C1000,1279 1000,1178 1000,1092L1000,1033L855,1033C730,1033 656,1033 597,1083C559,1115 530,1171 530,1239Z"
       />
@@ -171,7 +171,7 @@
   </div>
 
   <!-- se -->
-  <div class="farbehind" data-2100="opacity[cubic]:0" data-2400="opacity[cubic]:1" data-2700="opacity[cubic]:0;">
+  <div class="farbehind" data-2100="opacity[cubic]:0" data-2400="opacity[cubic]:0.9" data-2700="opacity[cubic]:0;">
     <svg class="letter" viewBox="0 0 2600 2000">
       <path d="M777,462C901,462 1023,503 1120,544L1069,671C982,634 878,596 777,596C612,596 566,701 566,764C566,835 612.082,884.819 663,908C745.636,945.62 830,931 954,977C1060.56,1016.53 1162,1115 1162,1259C1162,1416 1030,1576 777,1576C640,1576 505,1530 399,1483L453,1358C546,1400 659,1442 777,1442C950,1442 1012,1339 1012,1259C1012,1178 956.309,1122.18 894,1099C808,1067 703,1077 593,1026C498.84,982.344 416,891 416,764C416,608 549,462 777,462Z"
       />
@@ -232,16 +232,15 @@
       <div id="close">
         <span>×</span>
       </div>
-      <h2>Get karma</h2>
-      <p>» Be nice to other people :)
-        <br> » <a href="https://www.ammado.com/community/153173/donate" target="_blank">Donate</a> to the Ethiopian Red Cross Society.
-        <br> » Share on
+      <h2>Thank you</h2>
+      <p>» <a href="https://www.ammado.com/community/153173/donate" target="_blank">Donate</a> to the Ethiopian Red Cross Society
+        <br>» Share on
         <a href="https://twitter.com/intent/tweet?text=Gidole+-+Open+Source+Modern+DIN+by+@larsenwork&url=https%3A%2F%2Fgidole.github.io" target="_blank">Twitter</a>,
         <a href="http://www.facebook.com/sharer/sharer.php?s=100&p%5Burl%5D=http%3A%2F%2Fgidole.github.io" target="_blank">Facebook</a>,
-        <a href="https://plus.google.com/share?url=http://gidole.github.io" target="_blank">Google</a> or
-        <a href="https://www.linkedin.com/shareArticle?mini=true&url=http://gidole.github.io" target="_blank">Linkedin</a>.
-        <br> » Star on <a href="http://github.com/gidole/Gidole-Typefaces" target="_blank">Github</a> and appreciate on <a target="_blank" href="http://behance.net/gallery/22341011/Gidole-Free-Typeface">Bēhance</a>
-        <br> Follow <a href="https://twitter.com/intent/follow?screen_name=larsenwork" target="_blank">@larsenwork</a> for updates. Thank you!
+        <a href="https://plus.google.com/share?url=http://gidole.github.io" target="_blank">Google</a> +
+        <a href="https://www.linkedin.com/shareArticle?mini=true&url=http://gidole.github.io" target="_blank">Linkedin</a>
+        <br>» Star/like on <a href="http://github.com/gidole/Gidole-Typefaces" target="_blank">Github</a> + <a target="_blank" href="http://behance.net/gallery/22341011/Gidole-Free-Typeface">Bēhance</a>
+        <br><a href="https://twitter.com/intent/follow?screen_name=larsenwork" target="_blank">Follow</a> me for updates
       </p>
     </div>
   </div>
