--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="photo">
   <meta name="twitter:title" content="">
-  <meta name="twitter:image:src" content="/img/gidoleopensourcemoderndinsquare.png">
+  <meta name="twitter:image:src" content="https://gidole.github.io/img/gidoleopensourcemoderndinsquare.png">
   <meta name="twitter:url" content="https://gidole.github.io">
   <meta name="twitter:image:width" content="1600">
   <meta name="twitter:image:height" content="1600">
@@ -27,7 +27,7 @@
   <meta property="og:title" content="Gidole Open Source Modern DIN">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://gidole.github.io">
-  <meta property="og:image" content="/img/gidoleopensourcemoderndinface.png">
+  <meta property="og:image" content="https://gidole.github.io/img/gidoleopensourcemoderndinface.png">
   <meta property="og:image:width" content="3000">
   <meta property="og:image:height" content="1575">
   <meta property="og:description" content="Gidole - Open Source Modern DIN. A minimal, narrow and yet friendly typeface.">
