--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
       <br> .@···········@@@@@@@@@@@@@@@@@@@@·@·····@·.
       <br> .·············@@@@@@@@@@@@@@@@@@@@········.
       <br> .··············@@@@@@@@@@@@@@@@@@@@·······.
-      <br> .···············@@@@·@@@@@@@@@@
-      <span id="dot">@</span>@@@·······.
+      <br> .···············@@@@·@@@@@@@@@@<span id="dot">@</span>@@@·······.
       <br> .······················@@@@@@@@@@@········.
       <br> ..@@···················@@@@@@@@@@········..
       <br> ..@@@··················@@@@@@@@@·········..
