--- a/index.html
+++ b/index.html
@@ -230,14 +230,14 @@
       <div id="close">
         <span>×</span>
       </div>
-      <h3>Thank and help me</h3>
+      <h3>Thank you</h3>
       <p>
         <small>
           » <a href="https://www.ammado.com/community/153173/donate" target="_blank">Donate</a> to the Ethiopian Red Cross Society
-          <br>» <a href="https://twitter.com/intent/tweet?text=Gidole+-+Open+Source+Modern+DIN+by+@larsenwork&url=https%3A%2F%2Fgidole.github.io" target="_blank">Tweet</a>,
+          <br>» <a href="https://twitter.com/intent/tweet?text=Gidole+-+a+highly+recommended+open+source+modern+DIN+by+@larsenwork&url=https%3A%2F%2Fgidole.github.io" target="_blank">Tweet</a>,
           <a href="http://www.facebook.com/sharer/sharer.php?s=100&p%5Burl%5D=http%3A%2F%2Fgidole.github.io" target="_blank">like</a> or
           <a href="https://plus.google.com/share?url=http://gidole.github.io" target="_blank">+1</a>
-          <br>» Star on <a href="http://github.com/gidole/Gidole-Typefaces" target="_blank">Github</a> - currently 8th on <a href="https://github.com/showcases/fonts?s=stars" target="_blank">this list</a> and rising thanks to you
+          <br>» Star on <a href="http://github.com/gidole/Gidole-Typefaces" target="_blank">Github</a> - currently 8th on <a href="https://github.com/showcases/fonts?s=stars" target="_blank">this list</a> and rising thanks to you!
         </small>
       </p>
     </div>
@@ -334,7 +334,7 @@
         else if ($(window).scrollTop() > 2300) {
           $('html, body').animate({
             scrollTop: 3300
-          }, 3600);
+          }, 5000);
         } else {
           return false;
         }
@@ -369,7 +369,7 @@
         else if ($(window).scrollTop() > 2500) {
           $('html, body').animate({
             scrollTop: 2400
-          }, 3600);
+          }, 5000);
         } else {
           return false;
         }
