--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
   <div id="slut" class="wrap inverted ff clickable" data-3000="opacity:0" data-3200="opacity:1">
     <div>
       <h2>The End</h2>
-      <p>More info + all glyphs in the <a href="https://github.com/larsenwork/Gidole/blob/master/Resources/GidoleFont/Readme%2BCharacters.pdf?raw=true">pdf</a>. Gidole has recently been featured by <a href="https://github.com/showcases/fonts?s=stars">GitHub</a> (8th on the list and rising thanks to you).</p>
+      <p>More info + all glyphs in the <a href="https://github.com/larsenwork/Gidole/blob/master/Resources/GidoleFont/Readme%2BCharacters.pdf?raw=true">pdf</a>. Gidole has been featured by <a href="https://github.com/showcases/fonts?s=stars">GitHub</a> (7th on the list and rising thanks to you).</p>
     </div>
   </div>
 
@@ -237,7 +237,7 @@
           <br>» <a href="https://twitter.com/intent/tweet?text=Gidole+-+a+highly+recommended+open+source+modern+DIN+by+@larsenwork&url=https%3A%2F%2Fgidole.github.io" target="_blank">Tweet</a>,
           <a href="http://www.facebook.com/sharer/sharer.php?s=100&p%5Burl%5D=http%3A%2F%2Fgidole.github.io" target="_blank">like</a> or
           <a href="https://plus.google.com/share?url=http://gidole.github.io" target="_blank">+1</a>
-          <br>» Star on <a href="http://github.com/gidole/Gidole-Typefaces" target="_blank">Github</a> - currently 8th on <a href="https://github.com/showcases/fonts?s=stars" target="_blank">this list</a> and rising thanks to you!
+          <br>» Star on <a href="http://github.com/gidole/Gidole-Typefaces" target="_blank">Github</a> - currently 7th on <a href="https://github.com/showcases/fonts?s=stars" target="_blank">this list</a> and rising thanks to you!
         </small>
       </p>
     </div>
